force-app/main/default/objects/OpportunityLineItem/fields/Ave_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ave_Bill_Rate__c</fullName>
    <description>Bill rate or ave bill rate based on pay range</description>
    <label>Ave Bill Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>