force-app/main/default/objects/OpportunityLineItem/fields/Ave_DT_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ave_DT_Bill_Rate__c</fullName>
    <description>DT bill rate or ave DT bill rate based on pay range</description>
    <label>Ave DT Bill Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>