force-app/main/default/objects/OpportunityLineItem/fields/Ave_OT_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ave_OT_Bill_Rate__c</fullName>
    <description>OT bill rate or ave OT bill rate based on pay range</description>
    <label>Ave OT Bill Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>