force-app/main/default/objects/OpportunityLineItem/fields/Ave_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ave_Pay_Rate__c</fullName>
    <description>Pay rate or ave pay rate based on pay range</description>
    <label>Ave Pay Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>