force-app/main/default/objects/OpportunityLineItem/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>How we are charging for products or services</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Type</valueSetName>
    </valueSet>
</CustomField>