force-app/main/default/objects/OpportunityLineItem/fields/DT_Pay_Max__c.field-meta.xml
<CustomField>
    <fullName>DT_Pay_Max__c</fullName>
    <formula>Pay_Max__c *2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Pay Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>