force-app/main/default/objects/OpportunityLineItem/fields/DT_Pay_RateMin__c.field-meta.xml
<CustomField>
    <fullName>DT_Pay_RateMin__c</fullName>
    <description>Rate that we set</description>
    <formula>Pay_RateMin__c *2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Pay Rate/Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>