force-app/main/default/objects/OpportunityLineItem/fields/Pay_Max__c.field-meta.xml
<CustomField>
    <fullName>Pay_Max__c</fullName>
    <description>Rate that we set</description>
    <label>Pay Max</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>