force-app/main/default/objects/OpportunityLineItem/fields/Pay_RateMin__c.field-meta.xml
<CustomField>
    <fullName>Pay_RateMin__c</fullName>
    <description>Rate that we set</description>
    <label>Pay Rate/Min</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>