force-app/main/default/objects/OpportunityLineItem/fields/Project_Craft_Value_pp__c.field-meta.xml
<CustomField>
    <fullName>Project_Craft_Value_pp__c</fullName>
    <description>Value of the craft rate when the billing type is per person</description>
    <label>Project Craft Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>